syntax = "proto3";

package pro.darkgod.proto.commons;

option java_multiple_files = true;

message EmptyMessage {}

service EmptyService {
  rpc testCall (EmptyMessage) returns (EmptyMessage);
  rpc testStreamingCall (EmptyMessage) returns (stream EmptyMessage);
}